# baffl

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
scripts/: integration_test.sh
src/cpp/: ast.cpp  ast.h  code_emitter.cpp  code_emitter.h  code_generator.cpp  code_generator.h  code_lexer.cpp  code_lexer.h  code_parser.cpp  code_parser.h  common.h  main.cpp
src/cpp/ast/: emission_context.cpp  emission_context.h  function_attributes.h  intrinsics.cpp  intrinsics.h  type_manager.h
src/cpp/helpers/: file_reader.cpp  raii.h
src/cpp/utils/: file_reader.h
src/scripts/: integration_test.sh
tests/cpp/: ast_helper.h  code_lexer_test.cpp  code_parser_test.cpp  printers.h
tests/cpp/helpers/: ast.h  ast_builder.h  lexer.h
tests/cpp/test_helpers/: ast.h  ast_builder.h  test_ast.h  test_ast_builder.h  test_lexer.h
tests/integration/: bool.baffl  complex_function_plus.baffl  empty.baffl  error_code.baffl  errorcode.baffl  fibonacci.baffl  fibonacci_loop.baffl  function_arguments.baffl  function_arguments_bool.baffl  function_call.baffl  i32_tostring.baffl  maths_comparison.baffl  maths_division.baffl  maths_mod.baffl  maths_plus.baffl  maths_plus_minus.baffl  maths_plus_plus.baffl  print.baffl  print_multiple.baffl  variable.baffl  variable_mutable.baffl  variable_scope.baffl
